<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Lists"
        android:icon="@drawable/ic_list_bulleted"
        android:id="@+id/lists_nav_btn"/>
    <item android:title="Home"
        android:icon="@drawable/ic_home"
        android:id="@+id/home_nav_btn"/>
    <item android:title="Settings"
        android:icon="@drawable/ic_settings"
        android:id="@+id/settings_nav_btn"/>
</menu>