<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/indigo">

    <SearchView
        android:id="@+id/searchbar_movie"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_margin="8dp"
        android:background="@drawable/edit_text_border"
        android:backgroundTint="@color/blue_gray"
        android:color="@color/white_60"
        android:text="Search"
        android:textColor="@color/white_60"
        android:iconifiedByDefault="false"
        android:inputType="text" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/movie_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />
    <!--        android:id="@+id/movies_recyclerview"-->
</LinearLayout>