<resources>
    <string name="app_name">PRMSE</string>
    <string name="search_hint">Search Movies...</string>

    <string-array name="genre_filter">
        <item>Action</item>
        <item>Adventure</item>
        <item>Horror</item>
        <item>Science Fiction</item>
        <item>Crime</item>
        <item>Thriller</item>
    </string-array>

    <string-array name="languages">
        <item>English</item>
        <item>Dutch</item>
        <item>Arabic</item>
        <item>Spanish</item>
        <item>German</item>
        <item>Mandarin Chinese</item>
        <item>Hindi</item>
        <item>Bengali</item>
        <item>Portuguese</item>
        <item>Russian</item>
        <item>Japanese</item>
    </string-array>

</resources>